compiler/testData/diagnostics/tests/redeclarations/RedeclarationInMultiFile.kt
// FILE: a.kt
val <!REDECLARATION, REDECLARATION!>a<!> : Int = 1

// FILE: b.kt
val <!REDECLARATION, REDECLARATION!>a<!> : Int = 1